--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>G3 Architects</title>
+        <link rel="stylesheet" href="style.css">
+        
+
 </head>
-<body>
-        <header></header>
+<body class="work-sans-font">
+        <header>
+                <h1>Ali ashraf</h1>
+        </header>
         <main></main>
         <footer></footer>
         
